# RetroByte

./: README.md  bsnes_mercury_balanced.libretro  com.github.alainm23.retro-byte.json  meson.build  mgba.libretro  parallel_n64-Makefile.install  parallel_n64.libretro
data/: com.github.alainm23.retro-byte.gresource.xml  com.github.alainm23.retro-byte.gschema.xml  meson.build  stylesheet.css
src/: Application.vala  MainWindow.vala  Utils.vala
src/Objects/: Game.vala  Platform.vala  Snapshot.vala
src/Services/: Database.vala  RetroCoreManager.vala  SnapshotManager.vala
src/Views/: CoreView.vala  Platform.vala
src/Widgets/: ActionBar.vala  ActionRow.vala  ConsoleRow.vala  GameChild.vala  HeaderBar.vala  Pane.vala  ResumeGame.vala
